--- a/story/index.html
+++ b/story/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1><strong>Cat Rescue Stories</strong></h1>
+    <h1><strong>Cat Rescue Stories <img src="../img/thumbnail.jpg" width="10%>"</strong></h1>
     <h3>Check out our work!</h3>
 
-    <form action="https://google.com/" method="GET">
-    <label for="query">search a rescue story</label>
+    <form action="https://www.petfinder.com/" method="GET">
+    <label for="query">Adopt a Cat!</label>
     <input type="text" name="q" id="query">
     <button type="submit">Submit</button>
   </form>
