added image and edited css and html

--- a/home/index.html
+++ b/home/index.html
@@ -6,32 +6,37 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Home</title>
   </head>
-  <body>
-    <h1>Save the Cats</h1>
-    <h3>Our mission to save and protect cats all over the world.</h3>
 
-    <p>
-      <ul>
-        <li>Saving cats hoarding and other cruelty-related situations.</li>
-        <li>Helping thousands of animals find loving homes every single year.</li>
-        <li>Responding to emergency situations when disaster strikes.</li>
-        <li>Working with all levels of government to fight for stronger laws to protect cats.</li>
-    </ul>
-    </p>
+    <div class="container">
+      <div class="cats">
 
-    <div class="row">
+    <body>
+        <h1>Save the Cats</h1>
+        <h3>Our mission to save and protect cats all over the world.</h3>
 
-      <div class="column">
-        <h4>About</h4>
-        <p>Learn more about what we do and to read our previous success stories.</p>
-      </div>
+        <p>
+          <ul>
+            <li>Saving cats hoarding and other cruelty-related situations.</li>
+            <li>Helping thousands of animals find loving homes every single year.</li>
+            <li>Responding to emergency situations when disaster strikes.</li>
+            <li>Working with all levels of government to fight for stronger laws to protect cats.</li>
+        </ul>
+        </p>
 
-      <div class="column">
-        <h4>Donate</h4>
-        <p>Find ways to donate and volunteer.</p>
-      </div>
+        <div class="row">
 
+          <div class="column">
+            <h4>About</h4>
+            <p>Learn more about what we do and to read our previous success stories.</p>
+          </div>
+
+          <div class="column">
+            <h4>Donate</h4>
+            <p>Find ways to donate and volunteer.</p>
+          </div>
+
+        </div>
     </div>
-
+    </div>
   </body>
 </html>
