--- a/story/index.html
+++ b/story/index.html
@@ -18,28 +18,28 @@
 
     <div class="row">
     <div class="col">
-      <h2>Rescue Story 1: Glo</h2>
+      <h2 class="rescue">Rescue Story 1: Glo</h2>
       <img src="../img/precious-paws-animal-rescue-volunteer-img.jpg" width="25%">
       <p>February 13, 1999</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
     <div class="col">
-      <h2>Rescue Story 2: Snaps</h2>
+      <h2 class="rescue">Rescue Story 2: Snaps</h2>
       <img src="../img/32658-1.jpg" width="25%">
       <p>December 18, 2006</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
     <div class="col">
-      <h2>Rescue Story 3: Champ</h2>
+      <h2 class="rescue">Rescue Story 3: Champ</h2>
       <img src="../img/download.jpg" width="25%">
       <p>November 26, 2010</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
     <div class="col">
-      <h2>Rescue Story 4: Bailey</h2>
+      <h2 class="rescue">Rescue Story 4: Bailey</h2>
       <img src="../img/WhiteKitty50.jpg" width="25%">
       <p>September 12, 2012</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
