--- a/donation/index.html
+++ b/donation/index.html
@@ -10,6 +10,10 @@
     STC
   </header>
   <body>
-
+  <div>
+    Donate to STC and help save animals
+    <img id="cat-face" src=../img/catface.jpeg>
+  </div>
+  <script src="../js/main.js" charset="utf-8"></script>
   </body>
 </html>
