added css features

--- a/story/index.html
+++ b/story/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Rescue Stories</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body>
+  <body class="rstories">
     <h1><strong>Cat Rescue Stories <img src="../img/thumbnail.jpg" width="10%>"</strong></h1>
     <h3>Check out our work!</h3>
 
