--- a/story/index.html
+++ b/story/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
   </head>
-  <body class="rstories">
-    <h1><strong>Cat Rescue Stories <img src="../img/thumbnail.jpg" width="10%>"</strong></h1>
+  <body>
+    <h1 class="title"><strong>Cat Rescue Stories <img src="../img/thumbnail.jpg" width="10%>"</strong></h1>
     <h3>Check out our work!</h3>
 
     <form action="https://www.petfinder.com/" method="GET">
