--- a/donation/index.html
+++ b/donation/index.html
@@ -10,6 +10,10 @@
     STC
   </header>
   <body>
-
+    <ul class="nav-bar">
+      <li class="nav"><a href="../home/index.html">Home</a></li>
+      <li class="nav"><a href="../story/index.html">Story</a></li>
+      <li class="nav"><a href="../donation/index.html">Donate</a></li>
+    </ul>
   </body>
 </html>
