--- a/home/index.html
+++ b/home/index.html
@@ -11,11 +11,18 @@
       <div class="cats">
 
     <body>
+
+      <ul class="nav-bar">
+        <li class="nav"><a href="../home/index.html">Home</a></li>
+        <li class="nav"><a href="../story/index.html">Story</a></li>
+        <li class="nav"><a href="../donation/index.html">Donate</a></li>
+      </ul>
+
         <h1>Save the Cats</h1>
         <h3>Our mission to save and protect cats all over the world.</h3>
 
         <p>
-          <ul>
+          <ul class="facts">
             <li>Saving cats hoarding and other cruelty-related situations.</li>
             <li>Helping thousands of animals find loving homes every single year.</li>
             <li>Responding to emergency situations when disaster strikes.</li>
@@ -26,7 +33,7 @@
         <div class="row">
 
           <div class="column">
-            <h4>About</h4>
+            <h4>Story</h4>
             <p>Learn more about what we do and to read our previous success stories.</p>
           </div>
 
