added nav to donation page

--- a/donation/index.html
+++ b/donation/index.html
@@ -10,6 +10,11 @@
     STC
   </header>
   <body>
+    <ul class="nav-bar">
+      <li class="nav"><a href="../home/index.html">Home</a></li>
+      <li class="nav"><a href="../story/index.html">Story</a></li>
+      <li class="nav"><a href="../donation/index.html">Donate</a></li>
+    </ul>
   <div class="donate-blurb">
     Donate to STC and help save animals
     <img id="cat-face" src=../img/catface.jpeg>
